# dfdi

./: .gitignore  Cargo.toml  LICENSE  README.md
dfdi-core/: Cargo.toml
dfdi-core/src/: context.rs  error.rs  impls.rs  lib.rs  traits.rs
dfdi-macros/: Cargo.toml
dfdi-macros/src/: derive_service.rs  lib.rs
examples/: hello_world.rs
src/: cached.rs  cached_service.rs  lib.rs
src/util/: cached.rs  cached_ref.rs  mod.rs
