[package]
name = "dfdi"
description = "Dependency For Dependency Injection"

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dfdi-core = { version = "0.2.0", path = "./dfdi-core" }
dfdi-macros = { version = "0.2.0", path = "./dfdi-macros", optional = true }

once_cell = "1.16.0"

[dev-dependencies]

thiserror = "1.0.37"
rand = "0.8.5"

[features]
default = ["derive"]
derive = ["dfdi-macros"]

[workspace]
members = [".", "./dfdi-core", "./dfdi-macros"]

[workspace.package]
license = "MIT"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"

repository = "https://github.com/gtsiam/dfdi"
keywords = ["pattern", "typemap", "di", "dependency", "injection"]
categories = ["rust-patterns", "caching", "config"]
authors = ["George Tsiamasiotis <gtsiamasiotis@upnet.gr>"]
