[package]
name = "dfdi-macros"
description = "Macros for dfdi"

license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.102"
quote = "1.0.21"
proc-macro2 = "1.0.47"
proc-macro-crate = "1.2.1"

[dev-dependencies]
dfdi = { path = ".." }
